Fix scroll top position on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,12 @@ strong {
   transition: all 0.3s ease-in-out;
 }
 
+@media screen and (max-width: 640px) {
+  .scrollToTop {
+    right: 10px;
+  }
+}
+
 .scrollToTop.hide {
   opacity: 0;
 }
